<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!--    <parent>-->
    <!--        <groupId>org.springframework.boot</groupId>-->
    <!--        <artifactId>spring-boot-starter-parent</artifactId>-->
    <!--        <version>2.7.16</version>-->
    <!--    </parent>-->
    <groupId>org.example</groupId>
    <artifactId>jvm-perf-benchmarks</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>jmh-benchmarks</module>
        <module>spring-boot-benchmarks</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <org.openjdk.jmh>1.37</org.openjdk.jmh>
        <maven.compiler.plugin>3.11.0</maven.compiler.plugin>
        <maven.shade.plugin>3.5.0</maven.shade.plugin>
    </properties>

    <profiles>
        <profile>
            <id>jdk17_profile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <jdk.version>17</jdk.version>
                <compilerArgs>
                    --add-modules=jdk.incubator.vector,--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED,--add-exports=java.management/sun.management=ALL-UNNAMED,--enable-preview
                </compilerArgs>
            </properties>
        </profile>
        <profile>
            <id>jdk8_profile</id>
            <properties>
                <jdk.version>8</jdk.version>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core</artifactId>
                <version>${org.openjdk.jmh}</version>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-annprocess</artifactId>
                <version>${org.openjdk.jmh}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>2.7.16</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.openjdk.jmh</groupId>
                            <artifactId>jmh-generator-annprocess</artifactId>
                            <version>${org.openjdk.jmh}</version>
                        </path>
                    </annotationProcessorPaths>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <compilerArgs>
                        ${compilerArgs}
                    </compilerArgs>
                    <jdkToolchain>
                        <version>${jdk.version}</version>
                    </jdkToolchain>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>